# HolyHTTPD

./: .gitignore  .gitlab-ci.yml  LICENSE  Makefile  README.md  block_test_script.py  config.json  docker-compose.yaml  install.sh  invoke.yaml  log.txt  main.py  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: ci-cd.yml  pylint.yml  python-app.yml  spelling.yml  spelling2.yml  spelling3.yml
docker/: Dockerfile  docker-compose.yml
last_vers/: .flake8  .pylintrc  Dockerfile  README.md  build_env.sh  install.bat  main.py  run.bat
last_vers/modules/: packet_sniffer.py  pcap_parser.py
modules/: alert_handler.py  config.json  packet_sniffer.py  pcap_parser.py  server.py
setup/: setup.cfg  setup.py
test/: test_1.py  test_upload_file.py
