# pyproject.toml
[tool.poetry]
name = "web-server"
version = "0.1.0"
description = ""
authors = ["Your Name <youremail@example.com>"]
license = ""
readme = ""
homepage = ""

[tool.poetry.dependencies]
python = "^3.8"
scapy = "^2.4.5"
pyshark = "^0.4.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
flake8 = "^3.9.2"
